fixed overflow

--- a/usability/css/nav.css
+++ b/usability/css/nav.css
@@ -35,6 +35,7 @@ nav {
 	display: flex;
 	align-items: center;
 	background-color: #fff;
+	color: #fff;
 }
 
 .nav-menu {
@@ -72,7 +73,7 @@ nav {
 }
 
 .sign {
-	padding-right: 5vw;
+	/* padding-right: 5vw; */
 	display: flex;
 	align-items: center;
 	background-color: #fff;
@@ -110,13 +111,14 @@ nav {
 	border: 1px solid #0061ad;
 }
 
-@media (max-width : 675px) {
+@media (max-width : 1100px) {
 	nav {
 		display: flex;
 	}
 
 	.titlecontainer {
 		justify-content: space-between;
+		width: 100%;
 	}
 
 	.nav-and-sign, .nav-menu, .sign {
@@ -187,7 +189,7 @@ input:checked~nav .nav-and-sign {
 input:checked~nav .sign {
 	transform: translateY(0);
 	z-index: 0;
-	top: 254px;
+	top: 250px;
 	grid-gap: 10px;
 }
 
